Make find() find the directory no matter if the dir selector dialog adds the trailing "/" or not.

BUG: 94310

svn path=/trunk/kdepim/; revision=377687